<resources>
    <string name="app_name">AndroidTest</string>
    <string name="button1">TextView(文本框)</string>
    <string name="button2">EditText(输入框)</string>
    <string name="button3">Button(按钮)</string>
    <string name="button4">ImageButton(图像按钮)</string>
    <string name="button5">ImageView(图像视图)</string>
    <string name="button6">RadioButton(单选按钮)</string>
    <string name="button7">Checkbox(复选框)</string>
    <string name="button8">ToggleButton(开关按钮)</string>
    <string name="button9">Switch(开关)</string>
    <string name="button10">ProgressBar(进度条)</string>
    <string name="button11">SeekBar(拖动条)</string>
    <string name="button12">RatingBar(星级评分条)</string>
    <string name="button13">ScrollView(滚动条)</string>
    <string name="button14">Date-Time(时间日期)</string>
    <string name="button15">ProgressBar(进度条)</string>
    <string name="button16">ProgressBar(进度条)</string>
    <string name="button17">ProgressBar(进度条)</string>
    <string name="button18">ProgressBar(进度条)</string>
    <string name="button19">ProgressBar(进度条)</string>
    <string name="button_next">下一页</string>
    <string name="button_previous">上一页</string>
    <string name="text_view_title">文本框</string>
    <string name="text_view_textView1">带阴影的文本框</string>
    <string name="text_view_textView2">带直角边框的文本框</string>
    <string name="text_view_textView3">带圆角边框的文本框</string>
    <string name="text_view_textView4">带图片的文本框</string>
    <string name="text_view_textView5">http://www.baidu.com</string>
    <string name="button_title">按钮</string>
    <string name="button_button1">实现按下效果的按钮</string>
    <string name="button_button2">使用颜色值绘制圆角按钮</string>
    <string name="image_view_title">图像视图</string>
    <string name="radio_button_title">单选按钮</string>
    <string name="radio_button_radioButton1">男</string>
    <string name="radio_button_radioButton2">女</string>
    <string name="check_box_title">复选框</string>
    <string name="check_box_checkBox1">香蕉</string>
    <string name="check_box_checkBox2">苹果</string>
    <string name="check_box_checkBox3">菠萝</string>
    <string name="toggle_button_title">开关按钮</string>
    <string name="toggle_button_on">打开</string>
    <string name="toggle_button_off">关闭</string>
    <string name="switch_title">开关</string>
    <string name="switch_name">开关</string>
    <string name="switch_on">on</string>
    <string name="switch_off">off</string>
    <string name="rating_bar_title">星级评分条</string>
    <string name="date_time_title">时间日期</string>
    <string name="date_time_button1">开始计时</string>
    <string name="date_time_button2">停止计时</string>
    <string name="date_time_button3">复位</string>
    <string name="progress_bar_title">进度条</string>
    <string name="seek_bar_title">拖动条</string>
    <string name="scroll_view_title">滚动条</string>
    <string name="scroll_view_button1">滚到底部</string>
    <string name="scroll_view_button2">滚到顶部</string>
</resources>
